--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -4,7 +4,11 @@
       "profile": "Profile",
       "messages": "Messages",
       "requests": "Requests",
-      "settings": "Settings"
+      "settings": "Settings",
+      "dashboard": "Dashboard",
+      "postTrip": "Post Trip",
+      "matches": "Matches",
+      "chat": "Chat"
     },
     "auth": {
       "login": "Login",
@@ -17,5 +21,115 @@
       "title": "Notifications",
       "markAllRead": "Mark all as read",
       "noNotifications": "No notifications yet"
+    },
+    "sidebar": {
+      "theme": "Theme",
+      "reportBug": "Report Bug",
+      "loading": "Loading..."
+    },
+    "bugDialog": {
+      "title": "Report a Bug",
+      "description": "Please describe the issue you encountered. Our team will review your report as soon as possible.",
+      "typePlaceholder": "What type of bug is it?",
+      "messagePlaceholder": "Describe the bug or issue...",
+      "cancel": "Cancel",
+      "submit": "Submit Bug",
+      "submitting": "Submitting...",
+      "success": {
+        "title": "Bug Reported",
+        "description": "Thank you for your feedback! We'll look into it."
+      },
+      "error": {
+        "title": "Error",
+        "description": "Failed to submit bug report. Please try again."
+      }
+    },
+    "dashboard": {
+      "title": "Dashboard",
+      "welcome": "Welcome back! Here's an overview of your travel plans.",
+      "inviteFriends": {
+        "title": "Invite Friends",
+        "description": "Share your referral code with friends and help them join your travel community.",
+        "copied": "Copied!",
+        "copiedDescription": "Referral code copied to clipboard"
+      },
+      "postTrip": {
+        "title": "Ready for your next journey?",
+        "description": "Share your travel plans and find companions for your upcoming trip.",
+        "button": "Post a New Trip"
+      },
+      "upcomingTrips": {
+        "title": "Upcoming Trips",
+        "addTrip": "Add Trip",
+        "noTrips": "You don't have any upcoming trips.",
+        "postFirstTrip": "Post Your First Trip",
+        "findCompanions": "Find Companions",
+        "deleteTrip": {
+          "title": "Delete Trip",
+          "description": "Are you sure you want to delete this trip to {{destination}}? This action cannot be undone.",
+          "cancel": "Cancel",
+          "confirm": "Delete"
+        }
+      }
+    },
+    "tripPosting": {
+      "title": "Post Your Trip",
+      "subtitle": "Share your travel plans to find companions",
+      "fromLabel": "From City",
+      "fromPlaceholder": "e.g., Hyderabad",
+      "toLabel": "To City",
+      "toPlaceholder": "e.g., Toronto",
+      "airlineLabel": "Airline",
+      "airlinePlaceholder": "e.g., Air India",
+      "flightNumber": "Flight Number",
+      "flightNumberPlaceholder": "e.g., AC056",
+      "dateLabel": "Date of Travel",
+      "datePlaceholder": "Select your travel date",
+      "notesLabel": "Additional Notes",
+      "notesPlaceholder": "Any specific requirements or preferences?",
+      "findCompanions": "Find Companions",
+      "addToCalendar": "Add to Google Calendar",
+      "back": "Back",
+      "voiceHelp": "Please fill in your trip details. Enter your departure city, destination city, airline name, and select your travel date. You can also add any additional notes or preferences. Click on Find Companions when you're done."
+    },
+    "tripSelection": {
+      "title": "Post Your Trip",
+      "subtitle": "How would you like to create your trip?",
+      "uploadTicket": {
+        "title": "Upload Ticket",
+        "description": "Scan or upload your flight ticket"
+      },
+      "uploadBoardingPass": {
+        "title": "Upload Boarding Pass",
+        "description": "Scan or upload your boarding pass"
+      },
+      "manualEntry": {
+        "title": "Manual Entry",
+        "description": "Enter trip details manually"
+      },
+      "back": "Back",
+      "voiceHelp": "Choose how you want to post your trip. You can upload your ticket, boarding pass, or enter details manually. Uploading documents will automatically fill in your trip information."
+    },
+    "fileUpload": {
+      "ticket": {
+        "title": "Upload Your Ticket",
+        "subtitle": "Take a photo or upload from your device",
+        "uploadFromDevice": "Upload from Device (Image Only!)",
+        "takePhoto": "Take Photo",
+        "uploadedFile": "File uploaded:",
+        "continue": "Continue",
+        "back": "Back",
+        "voiceHelp": "Upload your flight ticket by taking a photo or selecting a file from your device. The system will automatically extract your flight information."
+      },
+      "boardingPass": {
+        "title": "Upload Your Boarding Pass",
+        "subtitle": "Take a photo or upload from your device",
+        "uploadFromDevice": "Upload from Device (Image Only!)",
+        "takePhoto": "Take Photo",
+        "uploadedFile": "File uploaded:",
+        "continue": "Continue",
+        "back": "Back",
+        "voiceHelp": "Upload your boarding pass by taking a photo or selecting a file from your device. The system will automatically extract your flight information."
+      }
     }
   }
